# ChangeLog for vserver-utils

  27 Jan 2006; Benedikt Böhm <hollow@gentoo.org> -scripts/commands/enter.sh:
  Remove enter command (use login instead)

  27 Jan 2006; Benedikt Böhm <hollow@gentoo.org> src/vexec.c, src/vnamespace.c,
  scripts/lib/vps.sh:
  Add sysvrc init style + cleanup

  26 Jan 2006; Benedikt Böhm <hollow@gentoo.org> m4/libs.m4, configure.ac,
  etc/makefile.am, -etc/examples/context.conf, +etc/fstab, +etc/mtab,
  +etc/procfs.conf, scripts/Makefile.am, scripts/commands/enter.sh,
  scripts/commands/info.sh, scripts/commands/procfs.sh, scripts/commands/stop.sh,
  -scripts/defaults, -scripts/lib/fs.sh, scripts/lib/vps.sh, scripts/lib/util.sh,
  scripts/pathconfig.in, +src/libvconfig, src/Makefile.am, +src/vconfig.c,
  +src/pathconfig.h.in:
  Add libvconfig + vconfig command line tool + adapt source tree

*vserver-utils-1.0.3 (22 Jan 2006)

  22 Jan 2006; Benedikt Böhm <hollow@gentoo.org> +scripts/lib/vps.sh:
  Add initng support

  22 Jan 2006; Benedikt Böhm <hollow@gentoo.org> +scripts/commands/reload.sh,
  scripts/Makefile.am:
  Add reload command to update limits and settings

  22 Jan 2006; Benedikt Böhm <hollow@gentoo.org> src/vrsetup.c, src/Makefile.am:
  Add virtual root device support

  22 Jan 2006; Benedikt Böhm <hollow@gentoo.org> -m4/initrddir.m4, configure.ac,
  -etc/vserver, etc/Makefile.am, +etc/examples/vservers.rc:
  Move init script to examples dir and skip global installation

  22 Jan 2006; Benedikt Böhm <hollow@gentoo.org> src/vattr.c:
  Fix error count logic

  22 Jan 2006; Benedikt Böhm <hollow@gentoo.org> scripts/commands/status.sh,
  scripts/lib/vps.sh, src/lockfile.c:
  Fix status command logic

  22 Jan 2006; Benedikt Böhm <hollow@gentoo.org> scripts/commands/start.sh,
  scripts/commands/stop.sh, scripts/lib/vps.sh:
  Fix start/stop exit codes

  22 Jan 2006; Benedikt Böhm <hollow@gentoo.org> m4/pathconfig.am,
  scripts/lib/vps.sh, scripts/pathconfig.in, src/Makefile, src/lockfile.c:
  Add new lockfile implementation
