@@ -3,7 +3,6 @@ default: all
 all:
 	aclocal -I m4
 	autoheader
-	libtoolize --force --copy
 	automake -afc
 	autoconf
 	rm -rf autom4te.cache/
